--- a/allposts.html
+++ b/allposts.html
@@ -10,7 +10,7 @@ sectionid: blog
         <h1>All Posts</h1> {% for page in site.posts %}
         <p>
             <strong><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></strong>
-            <span>on {{ page.date | date: "%B %e, %Y" }} {% if page.author %} by {{ page.author }}{% endif %}</span>
+            <span class="font-small"> {{ page.date | date: "%Y-%m-%d"  }} {% if page.author %} by {{ page.author }}{% endif %}</span>
         </p>
         {% endfor %}
     </div>
