增加Windows下安装以太坊的文章

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <h5>Wiki | 知识</h5>
+      <h5>Favorite | 收藏</h5>
       {% for doc in site.docs %}
       <p>
           <strong><a href="{{ doc.url | prepend: site.baseurl }}">{{ doc.title }}</a></strong>
