--- a/about.html
+++ b/about.html
@@ -1,5 +1,7 @@
 ---
+title: About | 关于
 layout: default
+sectionid: about
 ---
 
 <div class="container">
@@ -15,7 +17,7 @@ layout: default
 
                 <p>区块链： Ethereum/以太坊, BitCoin/比特币, EOS, ...</p>
 
-                <p>FinTech: 量化交易, 高频交易, 智能投顾, ...</p>
+                <p>金融科技: 金融系统, 量化交易, 智能投顾, ...</p>
             </h5>
                 <p class="text-center"> 联系我: root@caiyi.me </p>
           </div>
@@ -29,7 +31,7 @@ layout: default
 
                 <p>BlockChain: Ethereum, BitCoin, EOS, ...</p>
 
-                <p>FinTech: High FrequencyTrading(HFT), Robo-Advisor, ...</p>
+                <p>FinTech: CoreBanking, Quant,  Robo-Advisor, ...</p>
 
             </h5>
                 <p class="text-center"> Contact Me: yee.tsai@gmail.com </p>
