--- a/allposts.html
+++ b/allposts.html
@@ -6,12 +6,14 @@ sectionid: blog
 
 
 <div class="container">
-    <div class="inner-content">
-        <h1>All Posts</h1> {% for page in site.posts %}
+        {% for page in site.posts %}
+      <div class="row">
+        <div class="col-md-8 col-md-offset-1">
         <p>
-            <strong><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></strong>
-            <span class="font-small"> {{ page.date | date: "%Y-%m-%d"  }} {% if page.author %} by {{ page.author }}{% endif %}</span>
+            <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+            <span><em> {{ page.date | date: "%Y-%m-%d"  }} {% if page.author %} by {{ page.author }}{% endif %}</em></span>
         </p>
+      </div>
+      </div>
         {% endfor %}
-    </div>
 </div>
