--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ layout: default
       {% for doc in site.docs %}
       <p>
           <strong><a href="{{ doc.url | prepend: site.baseurl }}">{{ doc.title }}</a></strong>
+            <span class="font-small"> {% if doc.author %} {{ doc.author }}{% endif %}</span>
       </p>
       {% endfor %}
     </div>
