增加文章： 【智能合约】CryptoKitties核心代码(KittyCore)分析（一）

--- a/about.html
+++ b/about.html
@@ -11,13 +11,13 @@ sectionid: about
             <h3 class="header-light regular-pad">关于我</h3>
             <p><strong>蔡一</strong></p>
             <h5>
-                <p>软件工程师，痴迷于计算机的艺术。</p>
+                <p>软件工程师，痴迷于计算机的艺术。专注于金融科技。</p>
 
                 <p>编程语言：C/C++, Java, Solidity, Python, Go, ...</p>
 
                 <p>区块链： Ethereum/以太坊, BitCoin/比特币, EOS, ...</p>
 
-                <p>金融科技: 金融系统, 量化交易, 智能投顾, ...</p>
+                <p>金融业务: 金融系统, 量化交易, 智能投顾, ...</p>
             </h5>
                 <p class="text-center"> 联系我: root@caiyi.me </p>
           </div>
@@ -25,13 +25,13 @@ sectionid: about
             <h3 class="header-light regular-pad">About Me</h3>
             <p><strong>TsaiYee</strong></p>
             <h5>
-                <p>Software Engineer, Crazy about arts of computer.</p>
+                <p>Software Engineer, Crazy about arts of computer. Focus on FinTech.</p>
 
                 <p>Programe Language: C/C++, Java, Solidity, Python, Go, ...</p>
 
                 <p>BlockChain: Ethereum, BitCoin, EOS, ...</p>
 
-                <p>FinTech: CoreBanking, Quant,  Robo-Advisor, ...</p>
+                <p>Finance: CoreBanking, Quant,  Robo-Advisor, ...</p>
 
             </h5>
                 <p class="text-center"> Contact Me: yee.tsai@gmail.com </p>
@@ -44,17 +44,24 @@ sectionid: about
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-code" aria-hidden="true"></i></h1>
             <h3 class="text-center"><p>Software development</p> 软件开发</h3>
-            <p>专注软件开发20年。</p><p>长期保持对技术的的敏感性，始终坚持一线编码工作。 </p>
+            <div class="font-small">
+            <p>近20年金融及互联网软件开发、架构与系统实施经验。</p><p>长期保持对技术的的敏感性，始终坚持一线编码工作。</p><p>全栈式技术人才，精通架构、开发及团队管理。 </p>
+          </div>
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-diamond" aria-hidden="true"></i></h1>
             <h3 class="text-center"><p>Business Analysts</p>业务分析</h3>
-            <p>中国人民大学金融学在职研究生。</p><p>具有丰富的银行、保险、互联网金融方面的业务知识。</p>
+            <div class="font-small">
+            <p>中国人民大学金融学在职研究生。</p><p>具有丰富的银行、保险、互联网金融方面的业务知识。</p><p>全球最大的基于开放式平台和分布式技术的商业银行核心交易系统和账务处理系统的主要开发者。</p>
+          </div>
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-book" aria-hidden="true"></i></h1>
             <h3 class="text-center"><p>Technically Training</p>技术培训</h3>
-            <p>乐于分享，对新技术充满热情。</p><p>愿意把自己的经验和理解传递给更多的人。</p>
+            <div class="font-small">
+            <p>乐于分享，对新技术充满热情。</p><p>愿意把自己的经验和感悟传递给更多的人。</p>
+            <p>CIE2017全国高校区块链师资培训班区块链讲师</p>
+          </div>
         </div>
     </div>
 
