增加V神去中心化的意涵文章。修改docs目录下的文件名。

--- a/about.html
+++ b/about.html
@@ -45,25 +45,30 @@ sectionid: about
             <h1 class="text-center"><i class="fa fa-code" aria-hidden="true"></i></h1>
             <h3 class="text-center"><p>Software development</p> 软件开发</h3>
             <div class="font-small">
-            <p>近20年金融及互联网软件开发、架构与系统实施经验。</p><p>长期保持对技术的的敏感性，始终坚持一线编码工作。</p><p>全栈式技术人才，精通架构、开发及团队管理。 </p>
+            <p>区块链技术专家，精通以太坊智能合约开发。</p>
+            <p>近20年金融及互联网软件开发、架构设计与系统实施经验(包括银行、保险公司及消费行业电子商务平台)。</p>
+            <p>长期保持对技术的的敏感性，始终坚持一线编码工作。</p><p>全栈式技术人才，精通架构、开发及团队管理。 </p>
           </div>
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-diamond" aria-hidden="true"></i></h1>
             <h3 class="text-center"><p>Business Analysts</p>业务分析</h3>
             <div class="font-small">
-            <p>中国人民大学金融学在职研究生。</p><p>具有丰富的银行、保险、互联网金融方面的业务知识。</p><p>全球最大的基于开放式平台和分布式技术的商业银行核心交易系统和账务处理系统的主要开发者。</p>
+            <p>中国人民大学金融学在职研究生。</p>
+            <p>对区块链技术、区块链应用模式等有比较深刻的理解。能结合客户业务模式给出合适实施建议。</p>
+            <p>具有丰富的银行、保险、互联网金融方面的业务知识。</p>
+            <p>对股票、期货、数字货币高频交易，量化交易有丰富经验。</p>
           </div>
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-book" aria-hidden="true"></i></h1>
             <h3 class="text-center"><p>Technically Training</p>技术培训</h3>
             <div class="font-small">
-            <p>乐于分享，对新技术充满热情。</p><p>愿意把自己的经验和感悟传递给更多的人。</p>
-            <p>CIE2017全国高校区块链师资培训班区块链讲师</p>
+            <p>乐于分享，愿意把自己的经验和感悟传递给更多的人。</p>
+            <p>全球最大的基于开放式平台和分布式技术的商业银行核心交易系统和账务处理系统的主要开发者之一。</p>
+            <p>CIE2017全国高校区块链师资培训班区块链讲师。</p> <p>CSDN区块链技术沙龙特邀演讲嘉宾。</p>
           </div>
         </div>
     </div>
-
 
 </div>
