--- a/alldocs.html
+++ b/alldocs.html
@@ -10,26 +10,24 @@ sectionid: docs
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h3> BlockChain | 区块链 </h3>
-        {% for doc in site.docs %}
-        {% if doc.category == "blockchain" %}
+        {% assign docs = site.docs |where:"category","blockchain"| sort: "date" | reverse %}
+        {% for doc in docs %}
             <p>
             <strong><a href="{{ doc.url | prepend: site.baseurl }}">{{ doc.title }}</a></strong>
             <span class="font-small"> {% if doc.author %} {{ doc.author }}{% endif %}</span>
           </p>
-        {% endif %}
         {% endfor %}
       </div>
           </div>
             <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h3> FinTech | 金融科技 </h3>
-            {% for doc in site.docs %}
-            {% if doc.category == "fintech" %}
+            {% assign docs = site.docs |where:"category","fintech"| sort: "date" | reverse %}
+            {% for doc in docs %}
                 <p>
                 <strong><a href="{{ doc.url | prepend: site.baseurl }}">{{ doc.title }}</a></strong>
                 <span class="font-small"> {% if doc.author %} {{ doc.author }}{% endif %}</span>
               </p>
-            {% endif %}
             {% endfor %}
           </div>
         </div>
