--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ sectionid: about
           </div>
               <div class="col-md-6">
             <h3 class="header-light regular-pad">About Me</h3>
-            <p><strong>TsaiYee</strong></p>
+            <p><strong>Yee Tsai</strong></p>
             <h5>
                 <p>Software Engineer, Crazy about arts of computer. Focus on FinTech.</p>
 
